src/App.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');

html, body {
  width: 100%;
  height: 100%;
  overflow-x:'hidden';
  text-align: center;
}

.toolbarItems {
  justify-content: space-between;
}

#landingGrid {
  position: relative; 
  top: 20vh;
  z-index: 5;
  padding-bottom: 10vh;
}

#dashboard {
  position: relative;
  z-index: 5;
}

#ipadImg {
  max-width: 100%;
  width: 600px;
  min-width: 320px;
  object-fit:fill;
}

#loginBtn {
  font-family: "Abril Fatface", "Times New Roman";
  font-size: 1.1rem;
  padding: 4px 8px;
}

.salesText {
  box-sizing: border-box;
  padding: 20px;
  margin: auto;
  width: 100%;
  max-width: 440px;
  background-color: #007CBE ;
  color: white;
  border-radius: 5px;
  font-weight: 700;
}

.signUpFields {
  box-sizing: border-box;
  margin: auto;
  width: 100%;
  max-width: 440px;
  font-size: 1em;
  margin-top: 3vh;
  padding: 0px;
  border: 1px solid #707070;
  border-radius: 5px;
}

.partyinputs {
  margin: auto;
  font-size: 1em;
  padding: 4px;
  /* border: 1px solid #707070; */
  border-radius: 5px;
  color: #707070;
  /* font-family: "Raleway", sans-serif;
  font-weight: 700; */
  width: 90%;
}

.partyNumInput {
  width: 20px;
  min-width: none;
}

#wideBtn {
  margin: auto;
  font-size: 1.4em;
  font-family: 'Abril Fatface';
  padding: 0px;
  margin-top: 2vh; 
}

.loginModal {
  position: relative;
  top: 20vh;
  margin: auto;
  width: 300px;
  background-color: #FFD639;
  border: '2px solid #000';
  padding: 20px;
}

.partyCreate {
  text-align: left;
}

.partyDisplayBox {
  background-color: #007CBE;
  border: 1px #707070 solid;
  border-radius: 10px;
  width: 86vw;
  max-width: 1000px;
  margin: 10px auto;
  padding: 12px;
  align-self: center;
  align-items: center;
  font-weight: 700;
  font-size: 1.2rem;
  text-align:left;
  color: white;
  font-family: 'Raleway', sans-serif;
  height: auto;
}

.seatedPartyDisplayBox {
  background-color: #FFF3C2;
  color: #707070;
}

.overduePartyDisplayBox {
  background-color:#FFD639;
}

.partyDisplayBoxLine1 {
  /* margin-top: 12px;
  margin-bottom: 12px; */
  line-height: 50px;
  height: 50px;
  justify-content: space-between;
  vertical-align: middle;
}

.timeBox {
  box-sizing:border-box;
  background-color: white;
  color: #007CBE;
  padding: 5px;
  margin-bottom: 10px;
  border: solid 1px #707070;
  border-radius: 5px;
  text-align:left;
  align-self: center;
  justify-self: center;
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

.seatedTimeBox {
  background-color: #FFF3C2;
  color: #707070;
}

.overdueTimeBox {
  color: #9a423b;
}

.lineUpBtn {
  display: inline-block;
  vertical-align: middle;
  line-height: normal;
}

#orangeBtn {
  background-color: #FBAF00;
  color: #FFFFFF;
  align-self: center;
  /* justify-self: end; */
  font-weight: 700;
  font-size: 1em;
  padding: 2px 8px;
}

.regularArrowBtn {
  filter: drop-shadow(-1px -1px 1px black);
  transform: rotate(180deg);
  margin-top: 9px;
}

.rotateArrowBtn {
  filter: drop-shadow(1px 1px 1px black);
  margin-top: 9px;
}

.seatedArrowBtn {
  color: #707070;
  margin-top: 9px;
}

#seatedBtn {
  background-color: #FFF3C2;
  color: #707070;
  align-self: center;
  /* justify-self: center; */
  font-weight: 700;
  font-size: 1em;
  border: 1px solid #707070;
  padding: 2px 8px;
}

/* TODO: setup hover colors for buttons */
#delete {
  background-color: #9a423b;
  color: #FFFFFF;
  align-self: center;
  /* justify-self: end; */
  font-weight: 700;
  font-size: 1em;
  padding: 2px 8px;
}

.notes {
  font-size: .8em;
  font-style: italic;
}

#drawer {
  margin-top: -60px;
  z-index: 3;
  margin-left: 0px;
  position: fixed;
  color: #707070;
  background-color: white;
}
#drawerInside {
  color: #707070;

}
/* .MuiDrawer-paper {
  background-color: red;
} */

#admin {
  position: relative;
  z-index: 5;
  text-align: left;
  padding: 10px 0 10px 0;
  width: 90%;
  margin: auto;
  padding-bottom: 30px;
}

.sidebarLinks {
  text-decoration: none;
  color: #707070;
}

#footer {
  padding: 30px 0 30px 0;
  z-index: 10;
  background-color: #007CBE;
  color: #FBAF00;
  text-align: center;
  position: relative;
}

#admin a {
  color:#007CBE;
}

#reportTable {
  background-color: white;
  border: 1px dashed #707070;
  padding: 10px;
  /* overflow-x: scroll; */
}

#reportTable thead {
  color: #007CBE;
}

#reportTable td, #reportTable th {
  padding: 4px 12px 4px 12px;
  border-bottom: 1px dashed #d3d3d3;
}

.unseatedParty {
  color: #9a423b;
}

.daypick {
  margin: 10px 0px;
  /* padding: 5px; */
}
.daypickInput {
  box-sizing: border-box;
  padding: 5px;
  border: 1px solid #707070;
  border-radius: 4px;
  width: 150px;
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  color: #707070;
}
.fullBtn {
  width: 150px;
}

#tableOverflow {
  overflow-x: scroll;
  -ms-overflow-style: none;  
  scrollbar-width: none;
}
#tableOverflow::-webkit-scrollbar { 
  display: none;  
}


@media only screen and (max-width: 700px) {
  .partyDisplayBoxLine1 {
    font-size: 1rem;
  }
  .partyinputs {
    width: 100%;
  }
  #loginBtn {
    font-size: 1rem;
    padding: 4px;
  }
  #appName {
    font-size: 1.8rem;
  }
}

